dzil fixes conted

--- a/dist.ini
+++ b/dist.ini
@@ -26,6 +26,7 @@ exclude_filename = Changes      ; skip this generated file
 ; file modifications
 [OurPkgVersion]     ; add $VERSION = ... to all files
 [InsertCopyright]   ; add copyright at "# COPYRIGHT"
+[PodnameFromClassname] ; For Moops
 [PodWeaver]         ; generate Pod
 config_plugin = @DAGOLDEN ; DAGOLDEN plugin allows Pod::WikiDoc
  
@@ -83,7 +84,8 @@ max_target_perl = 5.010
  
 ; metadata
 [AutoPrereqs]       ; find prereqs from code
-skip = ^MarpaX::Languages::C::AST::Expected$ ; My personnal module that is in inc/
+skip = ^MarpaX::Languages::M4::Impl::GNU::BaseConversion$
+skip = ^MarpaX::Languages::M4::Impl::GNU::Eval::Actions$
  
 [MinimumPerl]       ; determine minimum perl version
  
