dist.ini: remove some unwanted stuff

--- a/dist.ini
+++ b/dist.ini
@@ -49,43 +49,18 @@ fake_home = 1       ; fakes $ENV{HOME} just in case
 [Test::Portability] ; xt/release/portability.t (of file name)
 options = test_one_dot = 0
 [Test::PodSpelling] ; xt/author/pod-spell.t
-stopwords = mckeeman
-stopwords = multipass
-stopwords = typedef
-stopwords = enums
-stopwords = grammarName
-stopwords = lexemeCallback
-stopwords = logInfo
-stopwords = earley
-stopwords = bnf
-stopwords = lhs
-stopwords = rhs
-stopwords = recognizer
-stopwords = recognizer's
-stopwords = marpa
-stopwords = marpa's
-stopwords = scanless
-stopwords = lexeme
-stopwords = ast
-stopwords = trigerred
-stopwords = conditionMode
-stopwords = subscriptionMode
-stopwords = callbackArgs
-stopwords = wantedArgs
 
 [@TestingMania]
 disable = Test::UnusedVars  ; Not fatal IMHO and there are cases where this cannot be avoided
 disable = Test::Compile     ; Already done before
 disable = Test::Portability ; Already done before
 disable = Test::PodSpelling ; Already done before (not int, but just in case)
-max_target_perl = 5.010
 
 [Test::ReportPrereqs] ; show prereqs in automated test output
  
 ; metadata
 [AutoPrereqs]       ; find prereqs from code
-skip = ^MarpaX::Languages::M4::Impl::GNU::BaseConversion$
-skip = ^MarpaX::Languages::M4::Impl::GNU::Eval::Actions$
+# skip = ^MarpaX::Languages::M4::Impl::GNU::BaseConversion$
  
 [MinimumPerl]       ; determine minimum perl version
  
