--- a/dist.ini
+++ b/dist.ini
@@ -29,7 +29,9 @@ exclude_filename = Changes      ; skip this generated file
 [PodnameFromClassname] ; For Moops
 [PodWeaver]         ; generate Pod
 config_plugin = @DAGOLDEN ; DAGOLDEN plugin allows Pod::WikiDoc
- 
+[Authority]
+locate_comment = 1
+
 ; generated files
 [License]           ; boilerplate license
 [ReadmeFromPod]     ; from Pod (runs after PodWeaver)
