dist.ini: Moops imposes p >= 5.014

--- a/dist.ini
+++ b/dist.ini
@@ -57,6 +57,7 @@ disable = Test::UnusedVars  ; Not fatal IMHO and there are cases where this cann
 disable = Test::Compile     ; Already done before
 disable = Test::Portability ; Already done before
 disable = Test::PodSpelling ; Already done before (not int, but just in case)
+max_target_perl = 5.014     ; Moops
 
 [Test::ReportPrereqs] ; show prereqs in automated test output
  
