dist.ini: fixes for Moo, removed nonneeded plugin

--- a/dist.ini
+++ b/dist.ini
@@ -77,7 +77,7 @@ bugtracker.rt      = 1
 repository.github  = user:jddurand
 homepage           = https://metacpan.org/release/%{dist}
  
-[MetaProvides::Package] ; add 'provides' to META files
+[MetaProvides::Class] ; add 'provides' to META files
 meta_noindex = 1        ; respect prior no_index directives
  
 [MetaYAML]          ; generate META.yml (v1.4)
@@ -88,8 +88,6 @@ meta_noindex = 1        ; respect prior no_index directives
 [ShareDir]          ; include shared resources for File::ShareDir
 ; dir = share/dist/MarpaX-Languages-M4
 [MakeMaker]         ; create Makefile.PL
-[OSPrereqs / MSWin32]
-Win32::ShellQuote => 0
  
 ; manifest (after all generated files)
 [Manifest]          ; create MANIFEST
