--- a/dist.ini
+++ b/dist.ini
@@ -87,8 +87,9 @@ meta_noindex = 1        ; respect prior no_index directives
 [ExecDir]           ; include 'bin/*' as executables
 [ShareDir]          ; include shared resources for File::ShareDir
 ; dir = share/dist/MarpaX-Languages-M4
-[MakeMaker]         ; create Makefile.PL
- 
+; [MakeMaker]         ; create Makefile.PL
+ [=inc::MyDistMakeMaker / MyDistMakeMaker]
+
 ; manifest (after all generated files)
 [Manifest]          ; create MANIFEST
  
