dist.ini: moved to PodWeaver +config_plugin = @RJBS

--- a/dist.ini
+++ b/dist.ini
@@ -28,7 +28,7 @@ exclude_filename = Changes      ; skip this generated file
 [InsertCopyright]   ; add copyright at "# COPYRIGHT"
 [PodnameFromClassname] ; For Moops
 [PodWeaver]         ; generate Pod
-config_plugin = @DAGOLDEN ; DAGOLDEN plugin allows Pod::WikiDoc
+config_plugin = @RJBS
 [Authority]
 locate_comment = 1
 
