Implicit dependency from MooX::Options and its autosplit facility - closes #1

--- a/dist.ini
+++ b/dist.ini
@@ -61,6 +61,10 @@ disable = Test::PodSpelling ; Already done before (not int, but just in case)
 [Test::ReportPrereqs] ; show prereqs in automated test output
  
 ; metadata
+[Prereqs]
+Data::Record = 0            ; RT#122674
+Regexp::Common = 0          ; RT#122674
+
 [AutoPrereqs]       ; find prereqs from code
 # skip = ^MarpaX::Languages::M4::Impl::GNU::BaseConversion$
  
